# unreal-editor-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/unreal_editor_mcp/: __main__.py  config.py  editor_bridge.py  server.py
src/unreal_editor_mcp/logs/: parser.py  tailer.py
tests/: test_build_manager.py  test_build_parser.py  test_editor_bridge.py  test_log_parser.py  test_log_tailer.py  test_server.py
